[gd_scene load_steps=13 format=2]

[ext_resource path="res://Globals/SFX.gd" type="Script" id=1]
[ext_resource path="res://SFXs/game_start_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://SFXs/game_over_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://SFXs/player_move.wav" type="AudioStream" id=4]
[ext_resource path="res://SFXs/gain_point.wav" type="AudioStream" id=5]
[ext_resource path="res://SFXs/lose_point.wav" type="AudioStream" id=6]
[ext_resource path="res://SFXs/button.wav" type="AudioStream" id=7]
[ext_resource path="res://SFXs/bomb.wav" type="AudioStream" id=8]
[ext_resource path="res://SFXs/life.wav" type="AudioStream" id=9]
[ext_resource path="res://SFXs/stock_point.wav" type="AudioStream" id=10]
[ext_resource path="res://SFXs/stock_point_used.wav" type="AudioStream" id=11]
[ext_resource path="res://SFXs/turtle.wav" type="AudioStream" id=12]

[node name="SFX" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="game_start_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="game_over_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="player_move_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="gain_point_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="lose_point_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="button_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="bomb_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="life_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="stock_point_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="stock_point_used_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="turtle_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

