extends Control

#warning-ignore:unused_class_variable
onready var game_start_sound = $game_start_sound
#warning-ignore:unused_class_variable
onready var game_over_sound = $game_over_sound
#warning-ignore:unused_class_variable
onready var player_move_sound = $player_move_sound
#warning-ignore:unused_class_variable
onready var gain_point_sound = $gain_point_sound
#warning-ignore:unused_class_variable
onready var lose_point_sound = $lose_point_sound
#warning-ignore:unused_class_variable
onready var button_sound = $button_sound
#warning-ignore:unused_class_variable
onready var bomb_sound = $bomb_sound
#warning-ignore:unused_class_variable
onready var life_sound = $life_sound
#warning-ignore:unused_class_variable
onready var stock_point_sound = $stock_point_sound
#warning-ignore:unused_class_variable
onready var stock_point_used_sound = $stock_point_used_sound
#warning-ignore:unused_class_variable
onready var turtle_sound = $turtle_sound